deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webrtc-deployment
  namespace: webrtc
  labels:
    app: webrtc
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: webrtc
  template:
    metadata:
      labels:
        app: webrtc
    spec:
        volumes:
        - name: webrtc-pv
          persistentVolumeClaim:
            claimName: webrtc-pvc
        imagePullSecrets:
        - name: regcred
        containers:
            - name: webrtc
              image: saalejo/webrtc:latest
              imagePullPolicy: Always
              ports:
                - containerPort: 8000
            - name: redis
              image: redis:7
              ports:
                - containerPort: 6379
